(lang dune 2.8)
(name camlbz2)
(version 0.7.1)
(generate_opam_files true)
(formatting (enabled_for ocaml dune))
(license "LGPL-3.0-or-later with OCaml-LGPL-linking-exception")
(authors "Stefano Zacchiroli" "Johannes Schauer Marin Rodrigues")
(maintainers "Pietro Abate" "Johannes Schauer Marin Rodrigues" "Ralf Treinen")
(source (uri git+https://gitlab.com/irill/camlbz2.git))
(bug_reports https://gitlab.com/irill/camlbz2/issues/)
(homepage http://www.mancoosi.org/software/)
(documentation "https://irill.gitlab.io/camlbz2")

(package
 (name camlbz2)
 (synopsis "CamlBZ2 OCaml bindings for the libbz2")
 (description "This is CamlBZ2, OCaml bindings for the libbz2 (AKA, bzip2)(de)compression library.")
 (depends "conf-libbz2" "stdlib-shims")
)
